crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@normal_body_armour_hybrid.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/normal_body_armour_hybrid.txt
---
Item {
    item_class: "Body Armours",
    rarity: Normal,
    name: None,
    base_type: Some(
        "Exceptional Hawker's Jacket",
    ),
    item_level: Some(
        82,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            62,
        ),
        strength: None,
        dexterity: Some(
            54,
        ),
        intelligence: Some(
            54,
        ),
    },
    sockets: Some(
        "S S S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Evasion Rating",
            value: "237",
        },
        Property {
            name: "Energy Shield",
            value: "73",
        },
    ],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [],
    notes: [
        "~b/o 10 exalted",
    ],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
