crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@normal_body_armour_implicit.txt.snap
---
source: crates/parser/tests/snapshots.rs
expression: item
input_file: crates/parser/tests/items/normal_body_armour_implicit.txt
---
Item {
    item_class: "Body Armours",
    rarity: Normal,
    name: None,
    base_type: Some(
        "Exceptional Dastard Armour",
    ),
    item_level: Some(
        82,
    ),
    quality: Some(
        28,
    ),
    requirements: Requirements {
        level: Some(
            65,
        ),
        strength: Some(
            67,
        ),
        dexterity: Some(
            67,
        ),
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [
        Property {
            name: "Armour",
            value: "388 (augmented)",
        },
        Property {
            name: "Evasion Rating",
            value: "353 (augmented)",
        },
    ],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Life",
            ],
            stats: [
                "+72(60-80) to maximum Life",
            ],
        },
    ],
    flavour_text: [],
    notes: [
        "~b/o 10 exalted",
    ],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
