crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@pinnacle_key_fragment.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/pinnacle_key_fragment.txt
---
Item {
    item_class: "Pinnacle Keys",
    rarity: Currency,
    name: Some(
        "Ancient Crisis Fragment",
    ),
    base_type: None,
    item_level: None,
    quality: None,
    requirements: Requirements {
        level: None,
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [],
    flavour_text: [],
    description: [
        "A carved piece of something older than the Vaal.",
        "Can be placed in a door in The Burning Monolith.",
    ],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
