crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@rare_belt.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/rare_belt.txt
---
Item {
    item_class: "Belts",
    rarity: Rare,
    name: Some(
        "Glyph Cord",
    ),
    base_type: Some(
        "Utility Belt",
    ),
    item_level: Some(
        81,
    ),
    quality: None,
    requirements: Requirements {
        level: Some(
            60,
        ),
        strength: None,
        dexterity: None,
        intelligence: None,
    },
    sockets: None,
    stack_size: None,
    properties: [],
    rune_mods: [],
    modifiers: [
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [],
            stats: [
                "20% of Flask Recovery applied Instantly",
            ],
        },
        Modifier {
            kind: Implicit,
            source: None,
            name: None,
            tier: None,
            tags: [
                "Charm",
            ],
            stats: [
                "Has 3(1-3) Charm Slots",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Revolutionary",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Charm",
            ],
            stats: [
                "31(28-33)% increased Charm Effect Duration",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Athlete's",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Life",
            ],
            stats: [
                "+142(120-149) to maximum Life",
            ],
        },
        Modifier {
            kind: Prefix,
            source: Some(
                Desecrated,
            ),
            name: Some(
                "Ulaman's",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "Life Flasks gain 0.1(0.1-0.2) charges per Second",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Ice",
            ),
            tier: Some(
                2,
            ),
            tags: [
                "Elemental",
                "Cold",
                "Resistance",
            ],
            stats: [
                "+36(36-40)% to Cold Resistance",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Maelstrom",
            ),
            tier: Some(
                3,
            ),
            tags: [
                "Elemental",
                "Lightning",
                "Resistance",
            ],
            stats: [
                "+35(31-35)% to Lightning Resistance",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Resurgence",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Life",
            ],
            stats: [
                "24.4(23.1-29) Life Regeneration per second",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [],
    corrupted: false,
    mirrored: false,
    unidentified: false,
    fractured: false,
    flags: [],
}
