crates/parser/tests/snapshots/snapshots__parses_real_item_fixtures@rare_bow_fractured_mirrored.txt.snap
---
source: crates/parser/tests/snapshots.rs
assertion_line: 11
expression: item
input_file: crates/parser/tests/items/rare_bow_fractured_mirrored.txt
---
Item {
    item_class: "Bows",
    rarity: Rare,
    name: Some(
        "Pandemonium Breeze",
    ),
    base_type: Some(
        "Warmonger Bow",
    ),
    item_level: Some(
        82,
    ),
    quality: Some(
        30,
    ),
    requirements: Requirements {
        level: Some(
            77,
        ),
        strength: None,
        dexterity: Some(
            163,
        ),
        intelligence: None,
    },
    sockets: Some(
        "S S S",
    ),
    stack_size: None,
    properties: [
        Property {
            name: "Physical Damage",
            value: "429-688 (augmented)",
        },
        Property {
            name: "Critical Hit Chance",
            value: "10.00% (augmented)",
        },
        Property {
            name: "Attacks per Second",
            value: "1.20",
        },
    ],
    rune_mods: [
        "+1 Suffix Modifier allowed (rune)",
        "Bow Attacks fire an additional Arrow (rune)",
        "Gain 5% of Damage as Extra Damage of all Elements (rune)",
    ],
    modifiers: [
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Merciless",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Damage",
                "Physical",
                "Attack",
            ],
            stats: [
                "176(170-179)% increased Physical Damage",
            ],
        },
        Modifier {
            kind: Prefix,
            source: None,
            name: Some(
                "Dictator's",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Damage",
                "Physical",
                "Attack",
            ],
            stats: [
                "79(75-79)% increased Physical Damage",
                "+176(175-200) to Accuracy Rating",
            ],
        },
        Modifier {
            kind: Prefix,
            source: Some(
                Desecrated,
            ),
            name: Some(
                "Flaring",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Damage",
                "Physical",
                "Attack",
            ],
            stats: [
                "Adds 37(26-39) to 65(44-66) Physical Damage",
            ],
        },
        Modifier {
            kind: Suffix,
            source: Some(
                Fractured,
            ),
            name: Some(
                "of Unmaking",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Attack",
                "Critical",
            ],
            stats: [
                "+5(4.41-5)% to Critical Hit Chance",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Many",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Attack",
            ],
            stats: [
                "+198(175-200)% Surpassing chance to fire an additional Arrow",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of the Sniper",
            ),
            tier: Some(
                1,
            ),
            tags: [],
            stats: [
                "+4 to Level of all Projectile Skills",
            ],
        },
        Modifier {
            kind: Suffix,
            source: None,
            name: Some(
                "of Destruction",
            ),
            tier: Some(
                1,
            ),
            tags: [
                "Damage",
                "Attack",
                "Critical",
            ],
            stats: [
                "+25(23-25)% to Critical Damage Bonus",
            ],
        },
    ],
    flavour_text: [],
    description: [],
    notes: [
        "~b/o 2800 divine",
    ],
    corrupted: false,
    mirrored: true,
    unidentified: false,
    fractured: true,
    flags: [],
}
